# reelsmaker-public

./: .env.example  .gitignore  CONTEXT.md  README.md  idea.md  pyrightconfig.json  reelibraLINUX.sh  reelibraMAC.command  reelibraWIN.cmd  run.sh
apps/backend/: README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 199a04cb840f_add_post_production_presets_and_video_.py  31992a96f15c_add_artifact_kind_created_composite_.py  4b2e9f7c1a3d_add_target_reel_count_to_jobs.py  4d9b9c14491d_add_oauth_connections_and_scheduled_.py  7c1f3a9b5e2d_add_bw_enabled_to_post_production.py  857f16ff0a07_add_display_name_to_jobs.py  8d4a2c6e1f9b_add_default_content_hash_to_prompt_.py  99f725157583_add_job_indices_status_created_at.py  9df22144281d_split_main_companion_fit_modes.py  9e5b1f8a2c04_add_force_reingest_to_jobs.py  ad0e5af03bfc_add_fit_mode_source_language_detected_.py  b1c4f7a9d3e2_add_vision_profile_to_jobs.py  b375ed0ea0a0_initial_schema_jobs_artifacts_prompt_.py  c2f8a1b39e74_add_embedding_json_to_artifacts.py  d1a4f6b8e2c5_add_custom_system_prompt_to_jobs.py  db8c0fadfc0c_add_subtitle_style_presets_jobs_.py  e3f2c8a4d715_add_split_screen_to_presets.py  eb6d1b814c95_publer_scheduler_schema.py
apps/backend/scripts/: publer_probe.py  render_one_graph.py  smoke_glm_5_1.py
apps/backend/src/videomaker/: __init__.py  main.py
apps/backend/src/videomaker/config/: export_presets.yaml  fillers_ru.yaml
apps/backend/src/videomaker/core/: artifacts.py  config.py  db.py  logging.py
apps/backend/src/videomaker/models/: audio_profile.py  canvas.py  evidence.py  job.py  job_constants.py  job_dto.py  job_orm.py  job_types.py  narrative.py  post_production.py  project.py  reel_plan.py  runtime_settings.py  scheduler.py  story_script.py  vision_settings.py
apps/backend/src/videomaker/services/: account_profiles_store.py  adaptive_leveller.py  api_keys_store.py  asset_store.py  audio_analyzer.py  audio_normalizer.py  auto_config_advisor.py  auto_config_llm_fallback.py  beat_detector.py  breath_classifier.py  canvas_builder.py  (+74 more)
apps/backend/tests/: conftest.py  test_agents.py  test_base_crop_planner.py  test_canvas_builder.py  test_canvas_model.py  test_chunker.py  test_closure_validator.py  test_composition_scorer.py  test_compression.py  test_evidence_model.py  test_finalizers.py  test_font_scanner.py  test_job_profile_update.py  test_llm_client.py  test_llm_tier.py  test_media_integration.py  test_person_cluster.py  test_post_production.py  test_profile_detector.py  test_profile_masks.py  test_project_graph.py  test_project_renderer.py  test_prompt_store.py  test_prompts.py  test_rate_limiter.py  test_reels_composer.py  test_renderer.py  test_silence_cutter.py  test_story_script_model.py  test_subtitle_styles.py  test_subtitles.py  test_transcribers.py  test_transcript_cache.py  test_variants.py  test_video_effects.py  test_vision_smoke.py  test_visual_validator_invariants.py  test_zoom_planner.py
(+526 files in other folders)
