[project]
name = "videomaker"
version = "0.1.0"
description = "Local video cutter: long video to reels/shorts via LLM-driven multi-pass transcript analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "malovnik", email = "<redacted-email>" }
]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "httpx>=0.28",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "tiktoken>=0.8",
    "structlog>=24.4",
    "mlx-whisper>=0.4.2",
    "stable-ts[mlx]>=2.19",
    "silero-vad>=5.1",
    "onnxruntime>=1.19",
    "deepgram-sdk>=3.8",
    "google-genai>=0.3",
    "anthropic>=0.40",
    "openai>=1.60",
    "zhipuai>=2.1.5",
    "av>=13.1",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.2",
    "numpy>=2.1",
    "soundfile>=0.12.1",
    "greenlet>=3.4.0",
    "json-repair>=0.59.4",
    "mediapipe>=0.10.33",
    "llama-cpp-python>=0.3.2",
    "huggingface-hub>=0.26",
    "pillow>=11.0",
    "opensmile>=2.6.0",
    "praat-parselmouth>=0.4.7",
    "pyloudnorm>=0.2.0",
    "noisereduce>=3.0.3",
    "pedalboard>=0.9.22",
    "scikit-maad>=1.5.2",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
# E501 — длинные строки OK для docstrings с русским текстом
# RUF001/002/003 — ложные срабатывания на кириллические "с", "е" (похожие на латиницу)
# B008 — Depends(...) в default argument — идиома FastAPI
ignore = ["E501", "RUF001", "RUF002", "RUF003", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["A", "B"]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: тяжёлые тесты с реальным ffmpeg/mlx-whisper (skip по умолчанию)",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src/videomaker"]
branch = true
